--- a/apps/todo-db/values.yaml
+++ b/apps/todo-db/values.yaml
@@ -10,14 +10,16 @@ app-deployment:
     - name: quay
     - name: wwt-docker
   env:
-    - name: POSTGRES_DB
-      value: todo-db
-    - name: POSTGRES_USER
-      value: admin
-    - name: POSTGRES_PASSWORD
-      value: admin
     - name: PGDATA
       value: /temp/data
+  command:
+    - /bin/bash
+    - -c
+    - |-
+      POSTGRES_DB=todo-db \
+      POSTGRES_USER=admin \
+      POSTGRES_PASSWORD=admin \
+      docker-entrypoint.sh
   livenessProbe:
     tcpSocket:
       port: 5432
