--- a/apps/todo-db/values.yaml
+++ b/apps/todo-db/values.yaml
@@ -19,7 +19,7 @@ app-deployment:
       POSTGRES_DB=todo-db \
       POSTGRES_USER=admin \
       POSTGRES_PASSWORD=admin \
-      docker-entrypoint.sh
+      exec docker-entrypoint.sh postgres
   livenessProbe:
     tcpSocket:
       port: 5432
