--- a/apps/todo-db/values.yaml
+++ b/apps/todo-db/values.yaml
@@ -16,9 +16,10 @@ app-deployment:
     - /bin/bash
     - -c
     - |-
-      POSTGRES_DB=todo-db \
-      POSTGRES_USER=admin \
-      POSTGRES_PASSWORD=admin \
+      source /secrets/ocp-secrets && \
+      POSTGRES_DB=$DATABASE_NAME \
+      POSTGRES_USER=$DATABASE_USERNAME \
+      POSTGRES_PASSWORD=$DATABASE_PASSWORD \
       exec docker-entrypoint.sh postgres
   livenessProbe:
     tcpSocket:
