--- a/appsets/dev-appset.yaml
+++ b/appsets/dev-appset.yaml
@@ -11,7 +11,7 @@ spec:
       repoURL: https://github.wwt.com/phammi/app-gitops-configs.git
       revision: main
       directories:
-      - path: apps/*/environments/dev/dev-1
+      - path: apps/*/environments/*
   template:      
     metadata:
       name: '{{index .path.segments 1}}' 
@@ -21,15 +21,13 @@ spec:
 
       # Source of the application manifests
       source:
-        repoURL: https://github.wwt.com/phammi/app-gitops-configs.git
+        repoURL: https://github.com/pnminh/app-gitops-configs.git
         targetRevision: main
         path: 'apps/{{index .path.segments 1}}'
         helm:
           valueFiles:
             - "values.yaml"
-            - "environments/dev/values.yaml"
-            - "environments/dev/{{.path.basename}}/values.yaml"
-      
+            - "environments/{{.path.basenameNormalized}}/values.yaml"      
       # Destination cluster and namespace to deploy the application
       destination:
         server: https://kubernetes.default.svc
