--- a/appsets/dev-appset.yaml
+++ b/appsets/dev-appset.yaml
@@ -8,7 +8,7 @@ spec:
   goTemplateOptions: ["missingkey=error"]
   generators:
   - git:
-      repoURL: https://github.wwt.com/phammi/app-gitops-configs.git
+      repoURL: https://github.com/pnminh/app-gitops-configs.git
       revision: tekton
       directories:
       - path: apps/*/environments/*
