--- a/apps/todo-api/values.yaml
+++ b/apps/todo-api/values.yaml
@@ -8,16 +8,13 @@ app-deployment:
     tag: "main-2cd97a3"
   imagePullSecrets: 
     - name: quay
-    - name: wwt-docker
-  command:
-    - /bin/bash
-    - -c
-    - |-
-      source /secrets/ocp-secrets && \
-      QUARKUS_DATASOURCE_USERNAME=$DATABASE_USERNAME \
-      QUARKUS_DATASOURCE_PASSWORD=$DATABASE_PASSWORD \
-      QUARKUS_DATASOURCE_JDBC_URL="jdbc:postgresql://todo-db:5432/$DATABASE_NAME" \
-      exec /usr/local/s2i/run
+  env:
+    - name: quarkus.datasource.username
+      value: admin
+    - name: quarkus.datasource.password
+      value: admin
+    - name: quarkus.datasource.jdbc.url
+      value: jdbc:postgresql://todo-db:5432/todo-db
   livenessProbe:
     httpGet:
       path: /q/health/live
@@ -28,6 +25,3 @@ app-deployment:
       path: /q/health/ready
       port: http
     initialDelaySeconds: 30
-  azKeyVault:
-    enabled: true
-    secretFileDir: /secrets
